--- a/snippets/dynamic-styles.liquid
+++ b/snippets/dynamic-styles.liquid
@@ -78,7 +78,8 @@
 		--media-shadow-vertical-offset: {{ settings.media_shadow_vertical_offset }}px;
 		--media-shadow-blur-radius: {{ settings.media_shadow_blur }}px;
 
-		--page-width: {{ settings.page_width | divided_by: 10 }}rem;
+		/* --page-width: {{ settings.page_width | divided_by: 10 }}rem; */
+		--page-width: 1300px;
 		--page-width-margin: {% if settings.page_width == '1600' %}2{% else %}0{% endif %}rem;
 
 		--card-image-padding: {{ settings.card_image_padding | divided_by: 10.0 }}rem;
