--- a/src/scss/sections/image-with-text.scss
+++ b/src/scss/sections/image-with-text.scss
@@ -2,7 +2,18 @@
   $self: &;
 
   .s-image-with-text & {
-    // overrides here
+    &--v-compressed {
+      #{ $self }__content > * {
+        margin-top: 0;
+        
+        &:not(:last-child) {
+          margin-bottom: 19px;          
+        }
+        &#{ $self }__list:not(:last-child) {
+          margin-bottom: 42px;
+        }
+      }
+    }
   }
   &--scheme {
     &-background-1 {
@@ -49,6 +60,13 @@
       line-height: 150%;
       letter-spacing: -0.03em;
     }
+
+    #{ $self }__content > * {
+      margin-top: 0;
+      &:not(:last-child) {
+        margin-bottom: 24px;
+      }
+    }
   }
   &__content {
     #{ $self }--scheme-background-1 &,
@@ -73,6 +91,12 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 1.22;
-    letter-spacing: -0.01em;    
+    letter-spacing: -0.01em;
+  }
+  &__list {
+    ul {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
   }
 }
