--- a/src/scss/sections/multicolumn.scss
+++ b/src/scss/sections/multicolumn.scss
@@ -2,14 +2,25 @@
   $self: &;
 
   .s-multicolumn & {
+    .subtitle {
+      margin: 20px auto;
+    }
     .title-wrapper-with-link {
       justify-content: center;
     }
   
     slider-component {
-      margin: 58px auto 56px;
+      margin: 56px auto;
     }
   
+    .multicolumn-list.grid {
+      @include fullhd {
+        column-gap: 121px;
+        .grid__item {
+          width: calc(25% - 121px * 3 / 4);          
+        }
+      }
+    }
     .multicolumn-list__item {
       .multicolumn-card__image-wrapper {
         margin-bottom: 16px;
@@ -26,6 +37,13 @@
         }
       }
       .multicolumn-card__info {
+        padding-top: 0;
+
+        @include fullhd {
+          padding-left: 0;
+          padding-right: 0;
+        }
+
         > * {
           padding-bottom: 0;
           font-style: normal;
@@ -44,6 +62,7 @@
         > .rte {
           font-family: 'Now';
           font-style: normal;
+          margin-top: 8px;
         }
       }
     }
