--- a/src/scss/sections/usp.scss
+++ b/src/scss/sections/usp.scss
@@ -1,9 +1,22 @@
 .s-usp .usp {
   background: $color-brand-seashell;
 
+  .page-width {
+    @include desktop {
+      padding-left: 51.5px;
+      padding-right: 51.5px;
+    }
+  }
+
   &__columns {
     @include tablet {
       align-items: center;
+    }
+    @include fullhd {
+      margin: -48.5px;
+      > .column {
+        padding: 48.5px;
+      }
     }
   }
   &__item {
@@ -16,14 +29,19 @@
     }    
     
     &-image {
-      min-width: 45px;
-      width: 45px;
-      height: 45px;
+      min-width: 40px;
+      width: 40px;
+      height: 40px;
       object-fit: contain;
-
+      
       @include mobile {
         margin-left: auto;
         margin-right: auto;
+      }
+      @include desktop-only {
+        min-width: 35px;
+        width: 35px;
+        height: 35px;
       }      
     }
 
@@ -39,6 +57,17 @@
       @include tablet {
         padding-left: 24px;
         padding-right: 33px;
+      }
+      @include desktop-only {
+        padding-left: 15px;
+        padding-right: 15px;
+        font-size: 12px;
+      }
+      @include widescreen {
+        padding-right: 20px;
+      }
+      @include fullhd {
+        padding-right: 0;
       }
   
       em {
