Develop 'Subscription Kits' section with pending add to cart

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,10 +4,12 @@
 
 // @import './base/typography';
 
+// TODO: compile sections and components css files and only import when needed
+
 @import './components/button';
+@import './components/ww-c-collapsed';
 
 // Sections
-// TODO: output sections in multiple css files and only import when needed
 @import './sections/featured-blog';
 @import './sections/featured-collection';
 @import './sections/featured-reviews';
@@ -17,6 +19,8 @@
 @import './sections/newsletter';
 @import './sections/recent-posts';
 @import './sections/usp';
+@import './sections/ww-s-product-tiles-readmore';
+
 
 // Shopify templates
 @import './templates/index';
