--- a/assets/section-product-recommendations.css
+++ b/assets/section-product-recommendations.css
@@ -1,19 +1,1 @@
-.product-recommendations {
-  display: block;
-}
-
-.product-recommendations:not(.product-recommendations--loaded) {
-  padding: 0;
-  margin: 0;
-}
-
-.product-recommendations__heading {
-  margin: 0;
-  margin-bottom: 3rem;
-}
-
-
-form.product-form {
-  position: relative;
-  z-index: 1;
-}
+.product-recommendations{display:block}.product-recommendations:not(.product-recommendations--loaded){margin:0;padding:0}.product-recommendations__heading{margin:0 0 3rem}form.product-form{position:relative;z-index:1}
