--- a/src/scss/components/ww-c-collapsed.scss
+++ b/src/scss/components/ww-c-collapsed.scss
@@ -1,7 +1,17 @@
 .ww-collapsed {
   $self: &;
   &__cta {
-
+    &-icon {
+      margin-left: 21px;
+      
+      svg {
+        transition: transform var(--duration-short) ease-in-out;
+        display: inline-block;
+        #{ $self }--active & {
+          transform: rotate(135deg);
+        }
+      }
+    }
   }
   &__content {
     transition: max-height var(--duration-short) ease;
