--- a/snippets/product-badge.liquid
+++ b/snippets/product-badge.liquid
@@ -6,4 +6,4 @@
 </span>
 {%- endcapture -%}
 
-<span class="badge badge--bottom-left" data-badge-content="{{ badge_content | downcase | strip }}">{{ product_badge_icon }}{{ badge_content }}</span>
+<span class="badge badge--bottom-left" data-badge-content="{{ badge_content | downcase | strip }}">{{ product_badge_icon }}{{ badge_content | strip }}</span>
