--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -92,10 +92,8 @@
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
     {{ 'theme.css' | asset_url | stylesheet_tag }}
-		{% comment %} TODO: Apply bundled css globally {% endcomment %}
-		{%- if template.name == 'index' -%}
-			{{ 'app.css' | asset_url | stylesheet_tag }}
-		{%- endif -%}
+    {% render 'template-css' %}
+    {{ 'app.css' | asset_url | stylesheet_tag }}
 
 		{%- section 'global-product-badges' -%}
 
