--- a/snippets/skio-plan-picker.liquid
+++ b/snippets/skio-plan-picker.liquid
@@ -172,15 +172,24 @@ Usage optional: {% render 'skio-plan-picker', product: product, key: key, form_i
 
     {% comment %} Radio SVGs {% endcomment %}
     {% capture radio_svg %}
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        {% if radio_type == 'square' %}
-          <rect width="20" height="20" x="2" y="2" stroke="currentColor" stroke-width="3" />
-          <rect class="skio-radio" width="12" height="12" x="6" y="6" fill="currentColor" />
-        {% else %}
-          <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"></circle>
-          <circle class="skio-radio" cx="12" cy="12" r="7" fill="currentColor"></circle>
-        {% endif %}
-      </svg>
+			{% if radio_type == 'square' %}
+				<svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<rect x="1" y="1.37798" width="16" height="16" stroke="currentColor" stroke-width="2"/>
+					<rect class="skio-radio" x="5" y="5.37798" width="8" height="8" fill="currentColor"/>
+				</svg>
+			{% else %}
+				<svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					{% if radio_type == 'square' %}
+						<rect width="20" height="20" x="2" y="2" stroke="currentColor" stroke-width="3" />
+						<rect class="skio-radio" width="12" height="12" x="6" y="6" fill="currentColor" />
+					{% else %}
+						<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"></circle>
+						<circle class="skio-radio" cx="12" cy="12" r="7" fill="currentColor"></circle>
+					{% endif %}
+				</svg>
+			{% endif %}
+
+				
     {% endcapture %}
     
     {% comment %} ONE TIME {% endcomment %}
@@ -194,7 +203,7 @@ Usage optional: {% render 'skio-plan-picker', product: product, key: key, form_i
               <div class="skio-radio__container">
                 {{ radio_svg }}
               </div>
-              One-time &nbsp;: 
+              One-time purchase:&nbsp;{{- -}} 
               <div class="skio-price">
                 <span skio-onetime-price>{{ current_variant.price | money }}</span>
               </div>
@@ -242,18 +251,20 @@ Usage optional: {% render 'skio-plan-picker', product: product, key: key, form_i
                 <div class="skio-radio__container">
                   {{ radio_svg }}
                 </div>
-                <div class="skio-group-title">
-                  {%- if group.name == 'Subscription' -%}
-                    Subscribe
-                  {%- else -%}
-                    Prepay
-                  {%- endif -%}
+                <div class="skio-group-title">{{- -}}
+                  <span>
+                    {%- if group.name == 'Subscription' -%}
+                      Subscribe
+                    {%- else -%}
+                      Prepay
+                    {%- endif -%}
+                  </span>{{- -}}
   
                   {% comment %} 
                     Discount logic should match the logic in skio-plan-picker.js and probably 
                     should match skio-cart-label.liquid
-                  {% endcomment %}
-                  {% liquid 
+                  {% endcomment %}{{- -}}
+                  {%- liquid 
                     for selling_plan in group.selling_plans
                       assign selected = false
                       if group.selling_plan_selected
@@ -288,13 +299,12 @@ Usage optional: {% render 'skio-plan-picker', product: product, key: key, form_i
                         assign price = current_variant.price | minus: discount_absolute
                       endif
                     endfor
-                  %}
-                    
-                  {% if group.name == 'Subscription' and discount_absolute > 0 %}
+                  -%}
+
+                  {%- if group.name == 'Subscription' and discount_absolute > 0 -%}
                     <span class="skio-save">Save <span skio-discount>{{ discount_text }}</span></span>
-                  {% endif %}
+                  {%- endif -%}
                 </div>
-                &nbsp;:
                 <div class="skio-price">
                   <span skio-subscription-price>{{ price | money }}</span>
                 </div>
@@ -321,6 +331,7 @@ Usage optional: {% render 'skio-plan-picker', product: product, key: key, form_i
                     </option>
                   {% endfor %}
                 </select>
+                {% render 'skio-details', no_branding: true %}
               </div>
             </label>
           </div>
@@ -335,8 +346,6 @@ Usage optional: {% render 'skio-plan-picker', product: product, key: key, form_i
       {{ subscriptionHTML }}
       {{ onetimeHTML }}
     {% endif %}
-
-    {% render 'skio-details' %}
   </fieldset>
 {% else %}
   <!-- Skio Plan Picker: No selling plans groups on this product -->
