--- a/src/scss/dawn/template-product.scss
+++ b/src/scss/dawn/template-product.scss
@@ -15,67 +15,175 @@
     // font-size: 48px;
     font-size: 42px;
     line-height: 110%;
+    
+    @include mobile {
+      font-size: 32px;
+    }
   }
-  h2, .h2 {
-    font-size: 36px;
-    line-height: 110%;
-  }
-  h3, .h3 {
-    font-size: 24px;
-    line-height: 150%;
-  }
-  h4, .h4 {
-    font-size: 18px;
-    line-height: 150%;
-  }
+  // h2, .h2 {
+  //   font-size: 36px;
+  //   line-height: 110%;
+  // }
+  // h3, .h3 {
+  //   font-size: 24px;
+  //   line-height: 150%;
+  // }
+  // h4, .h4 {
+  //   font-size: 18px;
+  //   line-height: 150%;
+  // }
 
   // Customizations ----------------------------------
-  .product__title {
-    margin-bottom: 16px;
-  }
-  .trustspot-inline-product {
-    margin-bottom: 16px;
-    .trustspot-inline-rating .ts-star {
-      font-size: 19px;
-    }
-    .trustspot-inline-rating,
-    .trustspot-inline-star,
-    .ts-reviews-rating-options {
-      line-height: 0;
+  .product__media-wrapper {
+    @include touch {
+      margin-bottom: 32px;
     }
   }
-  .product__guarantee {
-    margin-top: 0;
-    margin-bottom: 16px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 150%;
-    a {
-      font-size: inherit;
-    }
-  }
-  .skio-plan-picker {
-    margin-bottom: 16px;
-    select[skio-selling-plans] {
 
+  .product__info-wrapper {
+    .product__info-container > *:not(.product__title) {
+      @include desktop {
+        max-width: 391px;
+      }
     }
-  }
-  .shipping-bar {
-    margin-bottom: 24px;
-  }
-  .product-form__quantity-wrapper {
-    margin-bottom: 16px;
-  }
-  shopify-payment-terms {
-    margin-bottom: 32px;
-
-    @include mobile {
+    .product__title {
+      margin-bottom: 16px;
+    }
+    .trustspot-inline-product {
+      margin-bottom: 16px;
+      .trustspot-inline-rating .ts-star {
+        font-size: 19px;
+      }
+      .trustspot-inline-rating,
+      .trustspot-inline-star,
+      .ts-reviews-rating-options {
+        line-height: 0;
+      }
+      .ts-reviews-count {
+        font-family: 'Now';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 150%;
+      }
+    }
+    .product__guarantee {
+      margin-top: 0;
+      margin-bottom: 16px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 150%;
+      a {
+        font-size: inherit;
+      }
+    }
+    .skio-plan-picker {
+      margin-bottom: 16px;
+    }
+    .shipping-bar {
       margin-bottom: 24px;
+      .text {
+        font-family: 'Now';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 150%;
+        color: #000000;
+  
+        b {
+          font-weight: inherit;
+          color: $color-brand-orange;
+        }
+      }
+      .shipping-bar-price {
+        margin-top: 3px;
+      }
+      .shipping-tool-price {
+        font-family: 'Now';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 17px;
+        color: #999999;      
+      }
     }
-  }
-  .icon-with-text-wrap {
-    .icon-with-text img {
-      margin-bottom: 8px;
+    .product-form__quantity-wrapper {
+      margin-bottom: 16px;
+  
+      .product-form__quantity {
+        margin-bottom: 0;
+      }
+      .product-form__buttons {
+        flex-grow: 1;
+      }
+      .quantity {
+        min-height: 56px;
+        .quantity__input {
+          font-family: 'Now';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 19px;
+          letter-spacing: -0.01em;
+          color: #999999;
+        }
+      }
+      .quantity__button {
+        color: #999999;
+
+        svg {
+          transform: scale(1.3);
+        }
+      }
+      .product-form__submit {
+        font-family: 'Now';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 56px;
+        margin-bottom: 0;
+      }
+    }
+    .payment-terms-wrapper {
+      margin-bottom: 32px;
+  
+      @include mobile {
+        margin-bottom: 24px;
+      }
+  
+      .shopify-installments__content {
+        font-family: 'Now';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 150%;
+        color: #2E374D;      
+      }
+    }
+    .icon-with-text-wrap {
+      .icon-with-text {
+        line-height: 0;
+
+        img {
+          margin-bottom: 8px;
+        }
+        p {
+          font-family: 'Now';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 12px;
+          line-height: 150%;
+          text-align: center;
+          color: #000000;
+          letter-spacing: normal;
+          margin-top: 0;
+
+          strong {
+            color: $color-brand-orange;
+            font-weight: inherit;
+          }
+        }
+      }
     }
   }
 
