--- a/src/scss/dawn/template-product.scss
+++ b/src/scss/dawn/template-product.scss
@@ -20,18 +20,18 @@
       font-size: 32px;
     }
   }
-  // h2, .h2 {
-  //   font-size: 36px;
-  //   line-height: 110%;
-  // }
-  // h3, .h3 {
-  //   font-size: 24px;
-  //   line-height: 150%;
-  // }
-  // h4, .h4 {
-  //   font-size: 18px;
-  //   line-height: 150%;
-  // }
+  h2, .h2 {
+    font-size: 36px;
+    // line-height: 110%;
+  }
+  h3, .h3 {
+    font-size: 24px;
+    // line-height: 150%;
+  }
+  h4, .h4 {
+    font-size: 18px;
+    // line-height: 150%;
+  }
 
   // Customizations ----------------------------------
   .product__media-wrapper {
