--- a/sections/product-instruction.liquid
+++ b/sections/product-instruction.liquid
@@ -1,3 +1,5 @@
+{{ 'section-product-instruction.css' | asset_url | stylesheet_tag }}
+
 {%- style -%}
   .section-{{ section.id }}-padding {
     padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
@@ -27,7 +29,7 @@
   <div class="section-instruction page-accent--{{ section.settings.color_accent }}">
     <div class="page-width isolate section-{{ section.id }}-padding">
       <div class="section-head">
-        <h5>{{ section.settings.title }}</h5>
+        <h5 class="overline">{{ section.settings.title }}</h5>
         <h2 class="h1">{{ section.settings.subhead }}</h2>
       </div>
 
