Fix clipping for square images

--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -30,7 +30,7 @@
       assign ratio = 1
     endif
   -%}
-  <div class="card-wrapper card-wrapper--product underline-links-hover">
+  <div class="card-wrapper card-wrapper--product card-wrapper--media-{{ media_aspect_ratio }} underline-links-hover">
     <div class="card
       card--{{ settings.card_style }}
       {% if card_product.featured_media %} card--media{% else %} card--text{% endif %}
