--- a/src/scss/sections/ww-s-product-tiles-readmore.scss
+++ b/src/scss/sections/ww-s-product-tiles-readmore.scss
@@ -11,7 +11,9 @@
       font-size: 24px;
       line-height: 150%;
       letter-spacing: -0.02em;
-      color: #000000;      
+      color: #000000;
+      margin-bottom: 8px;
+      flex-grow: 0;
 
       a:after {
         display: none;
@@ -23,6 +25,7 @@
     .product-form__quantity-wrapper {
       width: 100%;
       display: block;
+      margin-top: 0;
       .product-form__buttons {
         width: 100%;
       }
@@ -58,6 +61,7 @@
     font-size: 16px;
     line-height: 150%;
     letter-spacing: -0.03em;
+    flex-grow: 1;
   }
   .price__container {
     font-family: 'Now';
